[flake8]
filename = *.py,*.pyx,*.pxd,*.pxi
max-line-length = 120
max-complexity = 10
ignore = E731,E228,E225,E226,E704,W504
per-file-ignores = __init__.py:F401

[isort]
line_length = 120
no_lines_before = LOCALFOLDER
lines_after_imports = 2
length_sort_straight = True

[pydocstyle]
convention = numpy
add-ignore = D100,D102,D105,D301

[metadata]
name = tip
version = 0.1.0
license_files = LICENSE.txt

[mypy]
ignore_missing_imports = True
show_error_codes = True
disable_error_code =
    # The following checks are disabled because there are too many false-positives:
    attr-defined, override

[mypy-torch.*]
follow_imports = skip
follow_imports_for_stubs = True

[pylint.*]
generated-members = numpy.*,torch.*  # pylint doesn't correctly figure out members of those packages
bad-names = foo,baz,toto,tutu,tata  # default values except `bar`
disable =
    fixme, unnecessary-pass, import-outside-toplevel, too-few-public-methods,
    protected-access,  # prefix '_' doesn't always mean protected: namedtuple._replace, TimeFrame._1M, etc
    # Handled by other linters:
    line-too-long, multiple-statements, missing-module-docstring, wrong-import-order, arguments-differ,
    unused-import, missing-function-docstring,
    # Handled by a code review:
    invalid-name, too-many-arguments, too-many-instance-attributes, too-many-locals, global-statement,
    exec-used, eval-used

[options]
url = https://github.com/itesoro/tip
zip_safe = False
python_requires = >= 3.10
install_requires =
    rich
    click
packages = find:

[options.entry_points]
console_scripts =
    tip = tip.cli:app
    tipython = tip.runner:tipython
